# call_me_maybe

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  thinking.md
data/input/: function_calling_tests.json  moulinette_prompt.json
llm_sdk/: __init__.py
src/: __main__.py  constrained_decoding.py  parser.py
